# coda

./: .gitignore  .pre-commit-config.yaml  README.md  dev_environment.yaml  environment.yaml  evaluate_data_assimilation.py  main.py  pyproject.toml  setup.cfg
coda/datamodule/: DataLoader.py
coda/model/: lorenz96.py  unet.py
coda/scripts/: test_data_assimilation_encoder.py
conf/: config.yaml  config_evaluate.yaml
conf/assimilation_network/: unet.yaml  unet_2d_1d.yaml  unet_periodic.yaml
conf/assimilator/: l96_conv_assimilator.yaml  l96_unet_assimilator.yaml
conf/da_encoder/: unet_2d_1d.yaml
conf/datamodule/: l96_dataset_one_level.yaml  l96_dataset_two_level.yaml  l96_observations.yaml
conf/experiment/: data_assimilation.yaml  debug.yaml  evaluate_data_assimilation.yaml  parameter_tuning.yaml  parametrization_learning.yaml  pretrain_data_assimilation.yaml
conf/lightning_module/: data_assimilation.yaml  default.yaml
conf/lightning_trainer/: trainer_gpu_0.yaml  trainer_gpu_1.yaml
conf/logger/: tensorboard.yaml
conf/model/: l96_param.yaml  l96_simulator.yaml
conf/optimizer/: adam.yaml
conf/trainer/: default.yaml
hpl/: initializations.py
hpl/datamodule/: DataLoader.py  __init__.py  observational_models.py
hpl/lib/: callbacks.py  config.py  da_encoder.py  datamodule.py  hydra_callbacks.py  lightning_module.py  logger.py  loss.py  model.py  observation_models.py  optimizer.py  trainer.py  (+1 more)
notebooks/: L96_DA_dapper.ipynb  baseline_data_assimilation_l96_two_level.ipynb  da_evaluate_final.ipynb  da_example_final.ipynb  da_imperfect_final.ipynb  da_input_length.ipynb  data_assimilation_example.ipynb  dda_example_final.ipynb  evaluate_data_assimilation_network.ipynb  evaluate_single_parametrization.ipynb  evaluation.ipynb  lorenz96-playground.ipynb  pt_evaluate_final.ipynb  unet-implementation.ipynb
scripts/: evaluate_data_assimilation_experiments.py
(+31 files in other folders)
