[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "coda"
dynamic = ["version", "readme"]
authors = [
  { name="Vadim Zinchenko", email="vadim.zinchenko@hereon.de" },
]
description = "Learning processes through data assimilation"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
]


[tool.setuptools]
packages = ["coda"]


[tool.setuptools_scm]
write_to = "coda/_version.py"


[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}


[tool.vulture]
exclude = ["conf/", "data/", "docs/", "notebooks/", "output*/", "logs/", "tests/"]
make_whitelist = false
min_confidence = 80
paths = ["coda/"]
sort_by_size = true
verbose = false
ignore_names = ["args", "kwargs"]


[tool.pylint]
max-line-length = 120
exclude-protected = ["_asdict", "_fields", "_replace", "_source", "_make", "_target_"]
logging-format-style = "new"
disable=[
    "logging-fstring-interpolation",
    "too-many-branches",
    "too-many-statements",
    "logging-fstring-interpolation",
    "too-many-locals",
    "unspecified-encoding",
    "too-many-ancestors",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-arguments",
    "missing-module-docstring",  # docstrings are handled by interrogate, so we don't need pylint to check them again
    "missing-class-docstring",
    "missing-function-docstring",
    "eval-used",
    "no-member",
]
good-names=["lr", "i", "j", "k", "t0"]
generated-members=["torch.*"]
ignore = ["tests", "_version.py", "docs", "notebooks", "data", "conf", "output*", "logs", "build"]


[tool.isort]
profile = "black"
src_paths = ["coda"]
line_length = 120
force_alphabetical_sort_within_sections = true
